--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section class="hero" id="home">
 
-        <video loop muted playsinline>
+        <video autoplay loop muted playsinline>
             <source src="DJI_0966.mp4" type="video/mp4">
             <source src="DJI_0966.webm" type="video/webm">
             Your browser does not support the video tag.
