--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
     <section class="hero" id="home">
 
-        <video autoplay loop muted playsinline>
+        <video loop muted playsinline>
             <source src="DJI_0966.mp4" type="video/mp4">
             <source src="DJI_0966.webm" type="video/webm">
             Your browser does not support the video tag.
         </video>
 
-        <div class="container">
+        <div class="main-container">
             <div class="hero-content">
                 <h1>في عروس المصايف</h1>
                 <p>ّفي مدينة المناخ البارد المثالي .. في عروس المصايف التي يعجز عن وصف حسنها وقت المطر الشعر والكالم..
@@ -166,6 +166,7 @@
         </button>
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="container">
             <ul class="footer-links">
@@ -177,7 +178,7 @@
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
             </ul>
-           
+
         </div>
     </footer>
 </body>
