--- a/index.html
+++ b/index.html
@@ -31,16 +31,21 @@
 
         <div class="main-container">
             <div class="hero-content">
-                <h1>في عروس المصايف</h1>
-                <p>ّفي مدينة المناخ البارد المثالي .. في عروس المصايف التي يعجز عن وصف حسنها وقت المطر الشعر والكالم..
-                    مشارف الهدا أحد مشاريع التطوير النوعّية من مـدر لالستثمار</p>
+                <h1> بدا البيع </h1>
+                <h1> قطع أراضي مطوره بمساحات مختلفة
+                </h1>
                 <a href="#contact" class="btn btn-outline" style="margin-left: 15px;" onclick="toggleSocials()">تواصل
                     معنا</a>
 
                 <div id="social-links" style="display: none; margin-top: 10px;">
-                    <a href="https://wa.me/" target="_blank" class="icon"><i class="fab fa-whatsapp"></i></a>
-                    <a href="https://facebook.com/" target="_blank" class="icon"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com/" target="_blank" class="icon"><i class="fab fa-twitter"></i></a>
+                    <a href="tel:0538244009" class="phone">
+                        <i class="fas fa-phone"></i>
+                    </a>
+                    <!---add whatsapp number---->
+
+                    <a href="https://twitter.com/mdr_mkt" target="_blank" class="twitter"><i
+                            class="fab fa-twitter"></i></a>
+                    <!---add twitter link---->
                 </div>
 
 
@@ -50,7 +55,7 @@
 
 
 
-    <!-- Featured Properties -->
+
 
 
     <section class="section">
@@ -68,7 +73,7 @@
 
 
     <section class="hero2">
-        <!-- Hero Background -->
+
         <div class="hero-bg"></div>
 
         <div class="container">
@@ -167,27 +172,24 @@
             <i class="fas fa-plus"></i>
         </button>
         <div class="social-buttons" id="socialButtons">
-            <a href="https://wa.me/" target="_blank" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://facebook.com/" target="_blank" class="facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="tel:0538244009" class="phone">
+                <i class="fas fa-phone"></i>
+            </a>
+            <!---add whatsapp number---->
+
+            <a href="https://twitter.com/mdr_mkt" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a>
+            <!---add twitter link---->
         </div>
 
     </div>
 
-    <!-- Footer -->
+
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
                 <img src="./3-01.png" alt="Company Logo">
             </div>
-            <ul class="footer-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#properties">Properties</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#locations">Locations</a></li>
-                <li><a href="#contact">Contact</a></li>
 
-            </ul>
 
         </div>
     </footer>
@@ -203,7 +205,6 @@
 
         socialButtons.classList.toggle("expanded");
 
-        // Toggle icons
         if (socialButtons.classList.contains("expanded")) {
             buttonIcon.classList.replace("fa-plus", "fa-minus");
         } else {
